--- a/module1/BienKieuDuLieuVaToanTu/ThucHanh/KhaiBaoVaSuDungBien/KhaiBaoVaSuDungBien.html
+++ b/module1/BienKieuDuLieuVaToanTu/ThucHanh/KhaiBaoVaSuDungBien/KhaiBaoVaSuDungBien.html
@@ -9,10 +9,11 @@
     let f = 20.5;
     let b = true;
     let s = 'Ha Noi';
+    let i = 'ab';
     document.write("i = " + i);
-    document.write("br/>");
+    document.write("<br/>");
     document.write("f = " + f);
-    document.write("br/>");
+    document.write("<br/>");
     document.write("b = " + b);
     document.write("s = " + s);
 </script>
