--- a/module1/CauTrucDieuKien/ThucHanh/LuyenTapToanTu2.html
+++ b/module1/CauTrucDieuKien/ThucHanh/LuyenTapToanTu2.html
@@ -5,6 +5,22 @@
     <title>Title</title>
 </head>
 <body>
+    <script>
+        let dauVao=prompt("Nhap vao chuc vu");
+        let dauRa=(dauVao=='Employee')?'Hello' : (dauVao=='Director')?'Greeting' : (dauVao=='')?'No Login':'';
+        alert(dauRa)
+        /*let message;
+        message=prompt("Nhap vao chuc vu");
+        if(message==='Employee') {
+            alert('Hello')
+        } else if(message==='Director') {
+            alert('Greetings');
+        } else if(message==='') {
+            alert('No Login');
+        } else {alert('')};
+
+         */
+    </script>
 
 </body>
 </html>
