--- a/module1/Module1-Ch0220-KieuSonHai/YeuCau1.html
+++ b/module1/Module1-Ch0220-KieuSonHai/YeuCau1.html
@@ -41,7 +41,7 @@
             +"Type Room : "+loaiPhong +'\n ' +
             "Rent Days : "+soNgayThue+'\n'
         + "Type Service : "+loaiDichVu+'\n'
-        +"So Tien Phai Tra: "+soTienPhaiTra);
+        +"So Tien Phai Tra: "+soTienPhaiTra+$);
 
 
 
