--- a/module1/CauTrucDieuKien/BaiTap/CauLenhSwitchCase.html
+++ b/module1/CauTrucDieuKien/BaiTap/CauLenhSwitchCase.html
@@ -6,7 +6,7 @@
 </head>
 <body>
    <input id="month" type="number">
-    <button type="button" onclick="xuLy()">Tính Số Ngày</button>
+    <button> type="button" onclick="xuLy()">Tính Số Ngày</button>
     <script>
         let xuLy1=document.getElementById("month");
         function xuLy() {
