--- a/module1/Module1-Ch0220-KieuSonHai/YeuCau2.html
+++ b/module1/Module1-Ch0220-KieuSonHai/YeuCau2.html
@@ -71,7 +71,7 @@
             let chooseEdit = prompt("1.Tên: " + customerName + '\n' +
                 "2.CMND: " + '\n' +
                 "3.Ngày Sinh: " + namSinh + '\n' + "4.Mail: " + mail + '\n' +
-                "5.Địa Chỉ: " + address + '\n' + "6.Loại Khách Hàng" + loaiKhachHang + '\n' +
+                "5.Địa Chỉ: " + address + '\n' + "6.Loại Khách Hàng: " + loaiKhachHang + '\n' +
                 "7.Giảm giá: " + giamGia + '\n' + "8.Số người đi chung: " + nguoiDiChung + '\n' +
                 "9.Loại phòng: " + loaiPhong + '\n' + "10.Số ngày thuê: " + soNgayThue + '\n' +
                 "11.Loại dịch vụ: " + loaiDichVu + '\n')
