--- a/module1/5.CauTrucLap/BaiTap/LuyenTapVongLap1/Bai6(TongCacSoChiaHetCHo7).html
+++ b/module1/5.CauTrucLap/BaiTap/LuyenTapVongLap1/Bai6(TongCacSoChiaHetCHo7).html
@@ -6,14 +6,17 @@
 </head>
 <body>
     <script>
-        let n;
+        let n=0;
         let count=0;
-        let Tong;
+        let toTal=0;
         while(count<=30) {
             if(n%7===0) {
-                count++
+                count++;
+                toTal+=n;
             }
+            n++
         }
+        document.write("Tong 30 so dau tien chia het cho 7 la: "+toTal);
     </script>
 
 </body>
