--- a/module1/5.CauTrucLap/BaiTap/LuyenTapVongLap2/Bai3.html
+++ b/module1/5.CauTrucLap/BaiTap/LuyenTapVongLap2/Bai3.html
@@ -5,15 +5,49 @@
     <title>Title</title>
 </head>
 <body>
-    <script>
+<script>
         let j;
         for(let i=0;i<5;i++) {
             for (j=0;j<5,j<=i;j++) {
-                console.log("*")
+                document.write("*");
             }
-            console.log();
+            document.write('<br>');
         }
-    </script>
 
+
+
+    //  let j;
+    // for(let i=0;i<5;i++) {
+    //     for (j=0;j<5,j<=4-i;j++) {
+    //          document.write("*");
+    //      }
+    //      document.write('<br>');
+    // }
+
+
+    //  let j;
+    // for(let i=0;i<5;i++) {
+    //     for (j=0;j<4-i;j++) {
+    //     document.write("&nbsp&nbsp");
+    //              }
+    //     for (j=4;j>=4-i;j--) {
+    //          document.write("*");
+    //
+    //      }
+    //      document.write('<br>');
+    // }
+
+
+        // let j;
+        // for(let i=0;i<5;i++) {
+        //     for (j=0;j<5,j<=i;j++) {
+        //         document.write("&nbsp&nbsp");
+        //     }
+        //     for(j=4;j>=i;j--) {
+        //         document.write("*")
+        //     }
+        //     document.write('<br>');
+        // }
+    </script>
 </body>
 </html>
