--- a/module1/6.Mảng/ThucHanh/TaoVaThaoTacVoiMang.html
+++ b/module1/6.Mảng/ThucHanh/TaoVaThaoTacVoiMang.html
@@ -8,9 +8,24 @@
 <input type="text" id="nhapText"></input>
     <button type="button" id="add" onclick="add()">Add</button>
     <button type="button" id="display" onclick="display()">Display</button>
+    <div id="result"></div>
     <script>
         let x=0;
         let array=[];
+        function add() {
+            array[x]=document.getElementById("nhapText").value;
+            alert("Element: "+""+array[x]+" "+"Added at index"+x);
+            x++;
+            document.getElementById("nhapText").value="";
+        }
+        function display() {
+            let e="<hr/>";
+            for(let i=0; i<array.length;i++) {
+                e+="Element" +i+"=" +array[i]+"<br/>";
+            }
+            document.getElementById("result").innerHTML=e;
+
+        }
 
 
     </script>
