--- a/module1/6.Mảng/BaiTap/SuDungCacHamCoSan.html
+++ b/module1/6.Mảng/BaiTap/SuDungCacHamCoSan.html
@@ -40,6 +40,8 @@
                 result.push(str[x].toLowerCase());
             } else if(LOWER.indexOf(str[x]) !== -1) {
                 result.push(str[x].toUpperCase());
+            } else {
+                result.push(str[x]);
             }
         }
         document.write(result.join(''));
