--- a/module1/7.Hàm/ThucHanh/ChuyenDoiNhietDo.html
+++ b/module1/7.Hàm/ThucHanh/ChuyenDoiNhietDo.html
@@ -10,7 +10,7 @@
     <input id="inputFahrenhiet" type="number" placeholder="Fahrenheit"
     oninput="temperatureConverter(this.value)"
     onchange="temperatureConverter(this.value)">
-    <p id="outputCelsius"></p>
+    <p id="outputCelsius">Celcius</p>
     <script>
         function temperatureConverter(doF) {
             doF=parseFloat(doF);
