--- a/module1/7.Hàm/BaiTap/LuyenTapSuDungHam2/Bai2.html
+++ b/module1/7.Hàm/BaiTap/LuyenTapSuDungHam2/Bai2.html
@@ -10,7 +10,8 @@
         const pi=3.14;
         chuvi;
         dientich;
-        let P; let S;
+        let P;
+        let S;
         function chuvi(r,pi) {
             P=2*r*pi;
             return P
