--- a/module1/7.Hàm/BaiTap/LuyenTapSuDungHam2/Bai5.html
+++ b/module1/7.Hàm/BaiTap/LuyenTapSuDungHam2/Bai5.html
@@ -7,6 +7,7 @@
 <body>
     <script>
         let mangso=[1,2,7,-3];
+        timMin();
         function timMin(mangso) {
             let m;
             for(let i=0;i<mangso.length;i++) {
