--- a/module1/8.LapTrinhHuongDoiTuong/1/ThucHanh/XayDungLopHinhTron.html
+++ b/module1/8.LapTrinhHuongDoiTuong/1/ThucHanh/XayDungLopHinhTron.html
@@ -9,16 +9,18 @@
         let Circle=function (radius) {
             this.radius =radius;
             this.getRadius=function () {
-                return radius
-            }
+                return this.radius
+            };
             this.getArea=function () {
-                return Math.PI *radius*radius
+                return Math.PI *this.radius*this.radius
             }
         };
         let circle=new Circle(2);
         let radius=circle.getRadius();
         let area=circle.getArea();
         alert("radius: "+radius+"; area: "+area);
+        circle.radius=5;
+        alert("this.radius: "+circle.getRadius()+"; area: "+circle.getArea());
     </script>
 
 </body>
