--- a/module1/CaseStudy Module1/YeuCau4.html
+++ b/module1/CaseStudy Module1/YeuCau4.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <script>
-        let arrNameCustomer;
+        let arrNameCustomer=[];
         while(true) {
         let choose=parseInt(prompt("1.Add new customers"+"\n"+"2.Delete customer"));
         switch (choose) {
