--- a/module1/8.LapTrinhHuongDoiTuong/2/BaiTap/BongDen/BongDen.html
+++ b/module1/8.LapTrinhHuongDoiTuong/2/BaiTap/BongDen/BongDen.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <img id="bongden" src="img/Den_Tat.gif">
+    <h4 id="result">Bong den dang tat</h4>
     <button value="Bat_tat" onclick="turnOn_TurnOff()">Bật-Tắt</button>
     <script>
         class SwitchButton {
