--- a/module1/6.Mảng/BaiTap/LuyenTapMang01.html
+++ b/module1/6.Mảng/BaiTap/LuyenTapMang01.html
@@ -19,8 +19,16 @@
     // document.write("Các phần tử lớn hơn hoặc bằng 10 trong mảng là: "+[kq])
 
     //Bài 2:Hiển thị phần tử lớn nhất và vị trí
-    let arr=[];
-    
+    // let chuoi=prompt("Nhập Chuỗi");
+    // document.write(chuoi+"<br/>");
+    // let mang=chuoi.split("");
+    // document.write("Có "+mang.length+" từ trong chuỗi");
+
+    //Bài 3:Đếm số nguyên âm phụ âm
+    let chuoi=prompt("Nhập chuỗi");
+    let regexp=/^[ueoai]$/i;
+    let mang=chuoi.split("");
+    console.log(chuoi.replace(regexp,""))
 </script>
 
 </body>
